--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/ai-generated-8036255_640.jpg)"
+              style="background-image: url(img/5.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/ai-generated-7976795_640.jpg)"
+              style="background-image: url(img/6.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/beer-2410710_640.jpg)"
+              style="background-image: url(img/7.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
@@ -61,19 +61,19 @@
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/curry-7249247_1280.jpg)"
+              style="background-image: url(img/8.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/pasta-7925059_640.jpg)"
+              style="background-image: url(img/9.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/pasta-7890670_1280.jpg)"
+              style="background-image: url(img/10.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
@@ -141,7 +141,7 @@
           <div class="swiper-slide slider__item">
             <div
               class="slider__img"
-              style="background-image: url(img/roast-goose-3790417_1280.jpg)"
+              style="background-image: url(img/19.jpg)"
             ></div>
           </div>
           <div class="swiper-slide slider__item">
